# serial2-rs

./: Cargo.toml
serial2-mio/: Cargo.toml
serial2-mio/src/: lib.rs
serial2-mio/src/sys/: mod.rs  unix.rs  windows.rs
